# headson

./: .release-plz.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  coverage.yml  release-binaries.yml  release-plz.yml  udeps.yml
crates/prunist/: Cargo.toml  README.md
crates/prunist/src/: lib.rs  search.rs  select.rs
python/: README.md
python/src/: lib.rs
src/: debug.rs  grep.rs  lib.rs  main.rs
src/cli/: args.rs  run.rs
src/ingest/: fileset.rs  format.rs  mod.rs
src/ingest/formats/: mod.rs
src/ingest/formats/json/: builder.rs  mod.rs
src/ingest/formats/text/: mod.rs
src/ingest/formats/yaml/: mod.rs
src/ingest/sampling/: mod.rs
src/order/: build.rs  mod.rs  scoring.rs  types.rs
src/pruner/: budget.rs  mod.rs  pruning_context.rs
src/serialization/: engine.rs  fileset.rs  mod.rs  output.rs  tests.rs  types.rs
src/serialization/templates/: core.rs  js.rs  mod.rs  pseudo.rs  text.rs  yaml.rs
src/utils/: measure.rs  mod.rs  tree_arena.rs
tests/: array_caps.rs  array_format.rs  array_head.rs  array_tail.rs  auto_stdin.rs  budget_cli.rs  budget_hardening.rs  budget_zero.rs  chars_budget.rs  cli_color.rs  cli_conflicts.rs  cli_golden.rs  cli_input.rs  code_highlight_quality.rs  code_root_sampling.rs  code_text_fallback_param.rs  color_budget_mismatch.rs  color_omission.rs  combined_limits.rs  compact.rs  cpp_text_fallback.rs  debug_snapshots.rs  debug_trace.rs  e2e.rs  e2e_head.rs  e2e_json_parse.rs  e2e_tail.rs  fileset_auto.rs  fileset_auto_case_insensitive.rs  fileset_auto_ingest.rs  fileset_auto_text_unknown.rs  fileset_auto_yaml_seq.rs  fileset_cli.rs  fileset_js.rs  fileset_json.rs  fileset_multi_ingest.rs  fileset_ordering.rs  fileset_pseudo.rs  fileset_tree.rs  fileset_yaml.rs  (+38 more)
tests/common/: mod.rs
tests/fixtures/explicit/: basic.jsonl  with_empty_lines.jsonl
tests/snapshots/: cli_golden__cli_grep_and_binary_warnings.snap  e2e__e2e_complex_nested_json__js__n100.snap  e2e__e2e_complex_nested_json__js__n1000.snap  e2e__e2e_complex_nested_json__js__n250.snap  e2e__e2e_complex_nested_json__json__n100.snap  e2e__e2e_complex_nested_json__json__n1000.snap  e2e__e2e_complex_nested_json__json__n250.snap  e2e__e2e_complex_nested_json__pseudo__n100.snap  e2e__e2e_complex_nested_json__pseudo__n1000.snap  e2e__e2e_complex_nested_json__pseudo__n10000.snap  e2e__e2e_complex_nested_json__pseudo__n250.snap  e2e__e2e_mixed_arrays_json__js__n100.snap  e2e__e2e_mixed_arrays_json__js__n250.snap  e2e__e2e_mixed_arrays_json__json__n100.snap  e2e__e2e_mixed_arrays_json__json__n250.snap  e2e__e2e_mixed_arrays_json__pseudo__n100.snap  e2e__e2e_mixed_arrays_json__pseudo__n1000.snap  e2e__e2e_mixed_arrays_json__pseudo__n250.snap  e2e_head__e2e_head_complex_nested_json__js__n1000.snap  e2e_head__e2e_head_complex_nested_json__js__n200.snap  e2e_head__e2e_head_complex_nested_json__pseudo__n1000.snap  e2e_head__e2e_head_complex_nested_json__pseudo__n200.snap  e2e_head__e2e_head_complex_nested_json__pseudo__n30.snap  e2e_head__e2e_head_mixed_arrays_json__js__n200.snap  e2e_head__e2e_head_mixed_arrays_json__pseudo__n200.snap  e2e_head__e2e_head_mixed_arrays_json__pseudo__n30.snap  e2e_tail__e2e_tail_complex_nested_json__js__n1000.snap  e2e_tail__e2e_tail_complex_nested_json__js__n200.snap  e2e_tail__e2e_tail_complex_nested_json__pseudo__n1000.snap  e2e_tail__e2e_tail_complex_nested_json__pseudo__n200.snap  e2e_tail__e2e_tail_complex_nested_json__pseudo__n30.snap  e2e_tail__e2e_tail_mixed_arrays_json__js__n200.snap  e2e_tail__e2e_tail_mixed_arrays_json__pseudo__n200.snap  e2e_tail__e2e_tail_mixed_arrays_json__pseudo__n30.snap  fileset_multi_ingest__fileset_multi_format_snapshot.snap  fileset_yaml__yaml_fileset_compact.snap  jsonl__jsonl_basic_default.snap  jsonl__jsonl_basic_detailed.snap  jsonl__jsonl_basic_strict.snap  jsonl__jsonl_compact_default.snap  (+1049 more)
