[package]
name = "prunist"
version.workspace = true
edition = "2024"
description = "Experimental library for pruning tree structures based on priority rules; API may change"
license = "MIT"
repository = "https://github.com/kantord/headson"
homepage = "https://github.com/kantord/headson"
publish = true
readme = "README.md"
keywords = ["tree", "pruning", "priority"]
categories = ["algorithms", "data-structures"]

[dependencies]
